// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`e2e should transform runtime 1`] = `
"import React from 'react';
import styled, { css, createGlobalStyle, keyframes } from 'styled-components';
const Animation = keyframes\`
  from {
    transform: translateX(1rem);
  }

  to {
    transform: translateX(-1rem);
  }
\`;
export const ArrowFunctionExpression = styled.input.attrs(props => ({
  type: 'password',
  size: props.size || '16px',
  width: props.width || 100
}))\`
  color: palevioletred;
  font-size: 0.14rem;
  border: 1px solid palevioletred;
  border-radius: 0.08rem;
  width: \${props => _px2rem(props.width)};
  padding: \${props => props.size};
\`;
const fontSize = 18;
export const GlobalStyle = createGlobalStyle\`
  html body {
    font-size: \${_px2rem(fontSize)};
    width: 10.24rem;
    min-height: 8rem;
  }
\`;

function getHeight() {
  const height = 100;
  return height / 2;
}

const mixins = css\`
  padding: 0 0.16rem;
  margin: 0.16rem 0.32rem 0.16rem 0.32rem;
\`;
export const MixinsButton = styled.button\`
  \${mixins};
  display: block;
  width: 100%;
  height: \${_px2rem(getHeight())};
  line-height: 0.32rem;
\`;
const lineHeight = '44';
export const ArrowFunctionExpressionWithBlockBody = styled.button\`
  width: \${props => _px2rem(() => {
  if (props.width) {
    return props.width;
  } else {
    return 0;
  }
})};
  line-height: \${_px2rem(lineHeight)};
\`;
export const StyledButton = styled.button\`
  width: 1.2rem;
  height: 0.32rem;
  font-size: 0.14rem;
\`;
export const ExtendStyledButton = styled(StyledButton)\`
  padding: \${props => _px2rem(props.padding)};
\`;
export const PropertyAccessExpression = styled.button(props => \`
  display: inline;
  width: \${_px2rem(props.width)};
  height: \${props.height};
  font-size: 0.16rem;
\`);
export const ThemeConsumer = styled.div\`
  font-size: \${props => _px2rem(props.theme.fontSize)};
  color: \${props => props.theme.color};
\`;
export const ConditionalExpression = function ({
  fontSize
} = {}) {
  const StyledButton = styled.button\`
    font-size: \${typeof fontSize === 'number' ? _px2rem(fontSize) : props => _px2rem(props.theme.fontSize)};
  \`;
  return React.createElement(StyledButton);
};
export const Foo = (function () {})\`
foo
\`;
const Bar = [''][0]\`
 bar
\`;

function _px2rem(input) {
  if (typeof input === 'function') return _px2rem(input());
  var value = typeof input === 'string' ? parseFloat(input) : typeof input === 'number' ? input : 0;
  var pixels = Number.isNaN(value) ? 0 : value;

  if (pixels < 2) {
    return \`\${pixels}px\`;
  }

  var mul = Math.pow(10, 5 + 1);
  return \`\${Math.round(Math.floor(pixels * 1 / 100 * mul) / 10) * 10 / mul}rem\`;
}"
`;

exports[`e2e should work 1`] = `
"import React from 'react';
import styled, { css, createGlobalStyle, keyframes } from 'styled-components';
const Animation = keyframes\`
  from {
    transform: translateX(1rem);
  }

  to {
    transform: translateX(-1rem);
  }
\`;
export const ArrowFunctionExpression = styled.input.attrs(props => ({
  type: 'password',
  size: props.size || '16px',
  width: props.width || 100
}))\`
  color: palevioletred;
  font-size: 0.14rem;
  border: 1px solid palevioletred;
  border-radius: 0.08rem;
  width: \${props => props.width}px;
  padding: \${props => props.size};
\`;
const fontSize = 18;
export const GlobalStyle = createGlobalStyle\`
  html body {
    font-size: \${fontSize}px;
    width: 10.24rem;
    min-height: 8rem;
  }
\`;

function getHeight() {
  const height = 100;
  return height / 2;
}

const mixins = css\`
  padding: 0 0.16rem;
  margin: 0.16rem 0.32rem 0.16rem 0.32rem;
\`;
export const MixinsButton = styled.button\`
  \${mixins};
  display: block;
  width: 100%;
  height: \${getHeight()}px;
  line-height: 0.32rem;
\`;
const lineHeight = '44';
export const ArrowFunctionExpressionWithBlockBody = styled.button\`
  width: \${props => {
  if (props.width) {
    return props.width;
  } else {
    return 0;
  }
}}px;
  line-height: \${lineHeight}px;
\`;
export const StyledButton = styled.button\`
  width: 1.2rem;
  height: 0.32rem;
  font-size: 0.14rem;
\`;
export const ExtendStyledButton = styled(StyledButton)\`
  padding: \${props => props.padding}px;
\`;
export const PropertyAccessExpression = styled.button(props => \`
  display: inline;
  width: \${props.width}px;
  height: \${props.height};
  font-size: 0.16rem;
\`);
export const ThemeConsumer = styled.div\`
  font-size: \${props => props.theme.fontSize}px;
  color: \${props => props.theme.color};
\`;
export const ConditionalExpression = function ({
  fontSize
} = {}) {
  const StyledButton = styled.button\`
    font-size: \${typeof fontSize === 'number' ? fontSize : props => props.theme.fontSize}px;
  \`;
  return React.createElement(StyledButton);
};
export const Foo = (function () {})\`
foo
\`;
const Bar = [''][0]\`
 bar
\`;"
`;
